--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="/scripts/jquery-ui-1.10.3.js"></script>
     <script src="/scripts/modernizr-2.6.2.js"></script>
     <script src="/scripts/knockout-2.3.0.debug.js"></script>
+    <script src="/scripts/config/settings.js"></script>
     <script src="/scripts/core/jsonviewer.js"></script>
     <script src="/scripts/core/common.js"></script>
     <script src="/scripts/core/knockout.extensions.js"></script>
